This is a quick push meant to get the branch ready to be checked out by someone else. Possible not working code.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,6 +17,16 @@ p, li {
 	font-weight: 400;
 }
 
+img {
+	/* black and white */
+	filter: grayscale(100%);
+}
+
+/* when image is hovered, make it colored */
+img:hover {
+	filter: grayscale(0%);
+}
+
 iframe {
 	overflow-x: hidden !important;
   }
