This is a quick push meant to get the branch ready to be checked out by someone else. Possible not working code.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,13 +17,13 @@ p, li {
 	font-weight: 400;
 }
 
-img {
+img.pointer {
 	/* black and white */
 	filter: grayscale(100%);
 }
 
 /* when image is hovered, make it colored */
-img:hover {
+img.pointer:hover {
 	filter: grayscale(0%);
 }
 
