--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,271 +1,296 @@
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Regular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Regular Italic.otf') format('opentype');
-    font-weight: normal;
-    font-style: italic;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Regular Italic.otf") format("opentype");
+  font-weight: normal;
+  font-style: italic;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Medium.otf') format('opentype');
-    font-weight: 500; /* medium */
-    font-style: normal;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Medium.otf") format("opentype");
+  font-weight: 500; /* medium */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Bold.otf') format('opentype');
-    font-weight: bold; /* or 700 */
-    font-style: normal;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Bold.otf") format("opentype");
+  font-weight: bold; /* or 700 */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Light.otf') format('opentype');
-    font-weight: 300; /* light */
-    font-style: normal;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Light.otf") format("opentype");
+  font-weight: 300; /* light */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Black.otf') format('opentype');
-    font-weight: 900; /* black */
-    font-style: normal;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Black.otf") format("opentype");
+  font-weight: 900; /* black */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'CeraPRO';
-    src: url('../fonts/cerapro/Cera Pro Black Italic.otf') format('opentype');
-    font-weight: 900; /* black */
-    font-style: italic;
+  font-family: "CeraPRO";
+  src: url("../fonts/cerapro/Cera Pro Black Italic.otf") format("opentype");
+  font-weight: 900; /* black */
+  font-style: italic;
 }
 
-html, body {
-	font-family: 'Roboto', fallback, sans-serif !important;
-    height: 100%;
-    margin: 0px;
-	/* overflow-y: hidden !important; */
+html,
+body {
+  font-family: "Roboto", fallback, sans-serif !important;
+  height: 100%;
+  margin: 0px;
+  /* overflow-y: hidden !important; */
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto', fallback, sans-serif !important;
-	/* font-family: 'Domine', serif; */
+.tangerine-regular {
+  font-family: "Tangerine", cursive !important;
+  font-weight: 400;
+  font-style: normal;
 }
 
-p, li {
-	font-family: 'Roboto', fallback, sans-serif !important;
-	font-weight: 400;
+.tangerine-bold {
+  font-family: "Tangerine", cursive !important;
+  font-weight: 700;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", fallback, sans-serif !important;
+  /* font-family: 'Domine', serif; */
+}
+
+p,
+li {
+  font-family: "Roboto", fallback, sans-serif !important;
+  font-weight: 400;
 }
 
 a {
-	font-family: 'Roboto', fallback, sans-serif !important;
-	text-decoration: underline;
+  font-family: "Roboto", fallback, sans-serif !important;
+  text-decoration: underline;
 }
 
 img.pointer {
-	/* black and white */
-	filter: grayscale(100%);
+  /* black and white */
+  filter: grayscale(100%);
 }
 
 /* when image is hovered, make it colored */
 img.pointer:hover {
-	filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 
 iframe {
-	overflow-x: hidden !important;
-  }
+  overflow-x: hidden !important;
+}
 
 .blue-text {
-	color: #06c !important;
+  color: #06c !important;
 }
 
 .green-text {
-	color: #199f5c !important;
+  color: #199f5c !important;
 }
 
 .greyscale {
-	filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .nomargin {
-	margin: 0px !important;
+  margin: 0px !important;
 }
 
 .minimargin {
-	padding-left: 2px !important;
-	padding-right: 2px !important;
+  padding-left: 2px !important;
+  padding-right: 2px !important;
+  /* background-color: #f4f4f7 !important; */
 }
 
 .bold {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 /* css class to hide scrollbar on a scrollable container */
 .hide-scrollbar::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 
 /* css class to hide scrollbar on a scrollable container */
 .hide-scrollbar {
-	-ms-overflow-style: none;  /* IE and Edge */
-	scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .responsive-img {
-	width: 100%;
-	max-height: 500px !important;
-	object-fit: cover;
-	object-position: top;
-	margin-bottom: 5px !important;
+  width: 100%;
+  max-height: 500px !important;
+  object-fit: cover;
+  object-position: top;
+  margin-bottom: 5px !important;
 }
 
 .full-height {
-    height: calc(100vh);
-	max-height: calc(100vh);
-	overflow-y: hidden !important;
+  height: calc(100vh);
+  max-height: calc(100vh);
+  overflow-y: hidden !important;
 }
 
 .crease-right {
-	border-right: 1px solid #E5E5E5;
+  border-right: 1px solid #e5e5e5;
 }
 
 .crease-bottom {
-	border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid #e5e5e5;
 }
 
-.click-shrink { 
-	transition: all .1s ease-in-out; 
+.click-shrink {
+  transition: all 0.1s ease-in-out;
 }
 
-.click-shrink:active { 
-	transform: scale(0.9); 
+.click-shrink:active {
+  transform: scale(0.9);
 }
 
 .no-border {
-	border: 1px solid #64b5f6 !important;
+  border: 1px solid #64b5f6 !important;
 }
 
 .section {
-	font-weight: lighter;
-	font-size: 16px;
-	margin-top: 10px;
-	border: 1px solid white;
-	color: white;
-	background-color: transparent;
-	cursor: pointer;
+  font-weight: lighter;
+  font-size: 16px;
+  margin-top: 10px;
+  border: 1px solid white;
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .skill {
-	font-weight: lighter;
-	font-size: 14px;
-	margin-top: 10px;
-	border: 1px solid white;
-	color: black;
-	background-color: white;
+  font-weight: lighter;
+  font-size: 14px;
+  margin-top: 10px;
+  border: 1px solid white;
+  color: black;
+  background-color: white;
 }
 
 .secondary-text {
-	color: #BC3F00 !important;
+  color: #bc3f00 !important;
 }
 
 .story {
-	font-weight: 300;
+  font-weight: 300;
 }
 
 .caption {
-	font-size: 9px;
-	font-weight: 300;
+  font-size: 9px;
+  font-weight: 300;
 }
 
 .story_block {
-	height: 100vh;
-	overflow-y: scroll !important;
+  height: 100vh;
+  overflow-y: scroll !important;
 }
 
 #greeting {
-	font-weight: 500;
-	margin-top: 41vh;
-	font-size: 22px;
-	z-index: 999 !important;
-	text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 41vh;
+  font-size: 22px;
+  z-index: 999 !important;
+  text-transform: uppercase;
 }
 
 .expectations {
-	font-weight: 300;
-	font-size: 12px;
-	margin-top: 0;
-	z-index: 999 !important;
-	text-transform: uppercase;
+  font-weight: 300;
+  font-size: 12px;
+  margin-top: 0;
+  z-index: 999 !important;
+  text-transform: uppercase;
 }
 
 .paragraph {
-	font-weight: 350; 
-	font-size: 11px;
+  font-weight: 350;
+  font-size: 11px;
 }
 
 .menuitem {
-	font-weight: 350; 
-	font-size: 11px;
-	text-transform: uppercase;
+  font-weight: 350;
+  font-size: 11px;
+  text-transform: uppercase;
 }
 
 .pointer {
-	cursor: pointer !important;
+  cursor: pointer !important;
 }
 
 .pointer:hover {
-	font-weight: 500;
+  font-weight: 500;
 }
 
 .menuitem-selected {
-	font-weight: 500 !important;
+  font-weight: 500 !important;
 }
 
 .topper {
-	font-weight: 400; 
-	font-size: 11px;
-	text-transform: uppercase;
+  font-weight: 400;
+  font-size: 11px;
+  text-transform: uppercase;
 }
 
 #left_section {
-	/* background: url("../img/eash2.png") center top no-repeat;  */
-	position: center;
-	background-size: contain;
-	/* background-color: #223D58; */
-	background: rgb(56,80,104);
-	/* background: radial-gradient(circle, rgba(56,80,104,1) 0%, rgba(34,61,88,1) 66%); */
-	background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(229,229,229,1) 66%);
-	/*background-color: #001f3f;*/
-	background-repeat: no-repeat;
+  /* background: url("../img/eash2.png") center top no-repeat;  */
+  position: center;
+  background-size: contain;
+  /* background-color: #223D58; */
+  background: rgb(56, 80, 104);
+  /* background: radial-gradient(circle, rgba(56,80,104,1) 0%, rgba(34,61,88,1) 66%); */
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(229, 229, 229, 1) 66%
+  );
+  /*background-color: #001f3f;*/
+  background-repeat: no-repeat;
 }
 
 #section_title {
-	text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 #story_title {
-	margin-top: 10px;
-	margin-bottom: 16px;
+  margin-top: 10px;
+  margin-bottom: 16px;
 }
 
 #top_right_menu_icon {
-	margin-top: 10.875px;
+  margin-top: 10.875px;
 }
 
 #background-image {
-    border-top: 50px solid #fff;
-    border-bottom: 50px solid #fff;
-    background: url('https://cdn.dribbble.com/users/1201592/screenshots/9078494/media/422a760a51cef7de2fa3db9daf697853.gif') center bottom no-repeat;
-	background-position: right 80px top 30px;
-    background-size: contain;
-    margin-top: 0px;
-    overflow-y: scroll !important;
+  border-top: 50px solid #fff;
+  border-bottom: 50px solid #fff;
+  background: url("https://cdn.dribbble.com/users/1201592/screenshots/9078494/media/422a760a51cef7de2fa3db9daf697853.gif")
+    center bottom no-repeat;
+  background-position: right 80px top 30px;
+  background-size: contain;
+  margin-top: 0px;
+  overflow-y: scroll !important;
 }
